Fix Header Logo on Mobile Devices
Make the logo image in the header always responsive, instead of changing
the height style depending on the screen size.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -245,10 +245,6 @@ p:empty
 #site-header
   margin-top: 1.5rem
   margin-bottom: 3rem
-  .banner-image img
-    height: 80px
-    +media-breakpoint-only(md)
-      height: 100%
   #header-buttons
     margin-top: 10px
     font-weight: bold
